--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,1 +1,39 @@
 /* основной CSS файл */
+
+.file_upload {
+    /* Для того, чтобы спозиционировать input
+       относительно контейнера. */
+    position: relative;
+    /* Скрываем неумещающуюся часть input-а. */
+    overflow: hidden;
+
+    /* Украшательство: */
+    background: #eee;
+    border: 1px solid #ccc;
+    font-size: 30px;
+    line-height: 1;
+    text-align: center;
+    padding: 10px;
+    width: 40px;
+}
+
+.file_upload input[type=file] {
+    /* Позиционируем правый верхний край
+       input поверх нашего контейнера.
+       Правый верхний потому как именно там
+       у нас кнопка. */
+    position: absolute;
+    top: 0; right: 0;
+
+    /* Делаем input побольше, чтобы он точно
+       перекрыл контейнер. */
+    font-size: 200px;
+
+    /* Делаем input невидимым. По-другому нельзя,
+       иначе браузер не будет на него реагировать. */
+    opacity: 0;
+    filter: alpha(opacity=0);
+
+    /*  Украшательства: */
+    cursor: pointer;
+}
